# rust-api

./: Cargo.toml  Makefile  Makefile.toml
src/: db.rs  lib.rs  main.rs  model.rs  models.rs  schema.rs
src/controller/: admin.rs
src/model/: admin.rs
src/test/: admin.rs
src/types/: admin.rs  jwt.rs
