[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_mysql_pool"] }
diesel = { version = "2.2.2", features = ["mysql", "chrono"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
bcrypt = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctor = "0.2.8"